Polish,Improve Code and Make Tests Passing (#1831)